--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url = jdbc:h2:mem:applicationDatabase
+spring.datasource.url = jdbc:h2:tcp://localhost:8080/JustRentIT
 spring.datasource.driver-class-name = org.h2.Driver
 spring.datasource.username = szymon
 spring.datasource.password = 1q2w3e
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:db/init.sql
+spring.jpa.show-sql = true
+spring.sql.init.mode = always
+spring.sql.init.data-locations=classpath:static/init.sql
